# bashautom

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
bashautom/: __init__.py  manager.py  session.py
tests/: test_session.py
